--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
                 android:gravity="center" style="@android:style/Widget.TextView" android:lines="1"
                 android:maxLines="1"
                 android:minLines="1" android:singleLine="true" tools:ignore="NestedWeights"
-                android:layout_marginStart="10dp" android:layout_marginEnd="5dp"/>
+                android:layout_marginStart="5dp" android:layout_marginEnd="5dp"/>
         <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -32,18 +32,19 @@
                 style="@android:style/Widget.Material.TextView" android:lines="1" android:minLines="1"
                 android:maxLines="1" android:singleLine="true"
                 android:textIsSelectable="false" android:textSize="24sp" android:textStyle="bold"
-                android:layout_marginStart="5dp" android:layout_marginEnd="10dp"/>
+                android:layout_marginStart="5dp" android:layout_marginEnd="5dp"/>
     </LinearLayout>
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1" android:gravity="center" android:layout_marginBottom="50dp">
+            android:layout_weight="1" android:gravity="center" android:layout_marginBottom="50dp"
+            android:id="@+id/layoutButtons" tools:ignore="DisableBaselineAlignment">
         <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                tools:ignore="NestedWeights" android:gravity="center">
+                tools:ignore="InefficientWeight,NestedWeights,UselessParent" android:gravity="center">
             <LinearLayout
                     android:orientation="vertical"
                     android:layout_width="match_parent"
@@ -58,7 +59,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:id="@+id/button6" android:layout_weight="1"
-                            android:layout_marginHorizontal="10dp"
+                            android:layout_marginHorizontal="5dp"
                             style="@android:style/Widget.Material.Button"
                             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                             android:onClick="onClick"/>
@@ -67,7 +68,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:id="@+id/button8" android:layout_weight="1"
-                            android:layout_marginHorizontal="10dp"
+                            android:layout_marginHorizontal="5dp"
                             style="@android:style/Widget.Material.Button"
                             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                             android:onClick="onClick"/>
@@ -76,7 +77,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:id="@+id/button15" android:layout_weight="1"
-                            android:layout_marginHorizontal="10dp"
+                            android:layout_marginHorizontal="5dp"
                             style="@android:style/Widget.Material.Button"
                             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                             android:onClick="onClick"/>
@@ -85,7 +86,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:id="@+id/button7" android:layout_weight="1"
-                            android:layout_marginHorizontal="10dp"
+                            android:layout_marginHorizontal="5dp"
                             style="@android:style/Widget.Material.Button"
                             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                             android:onClick="onClick"/>
@@ -98,28 +99,28 @@
                             android:text="@string/textBtnFour"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent" android:id="@+id/button3" android:layout_weight="1"
-                            android:layout_marginHorizontal="10dp" style="@android:style/Widget.Material.Button"
+                            android:layout_marginHorizontal="5dp" style="@android:style/Widget.Material.Button"
                             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                             android:onClick="onClick"/>
                     <Button
                             android:text="@string/textBtnFive"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent" android:id="@+id/button4" android:layout_weight="1"
-                            android:layout_marginHorizontal="10dp" style="@android:style/Widget.Material.Button"
+                            android:layout_marginHorizontal="5dp" style="@android:style/Widget.Material.Button"
                             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                             android:onClick="onClick"/>
                     <Button
                             android:text="@string/textBtnSix"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent" android:id="@+id/button16" android:layout_weight="1"
-                            android:layout_marginHorizontal="10dp" style="@android:style/Widget.Material.Button"
+                            android:layout_marginHorizontal="5dp" style="@android:style/Widget.Material.Button"
                             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                             android:onClick="onClick"/>
                     <Button
                             android:text="@string/textBtnMinus"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent" android:id="@+id/button5" android:layout_weight="1"
-                            android:layout_marginHorizontal="10dp" style="@android:style/Widget.Material.Button"
+                            android:layout_marginHorizontal="5dp" style="@android:style/Widget.Material.Button"
                             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                             android:onClick="onClick"/>
                 </LinearLayout>
@@ -131,14 +132,14 @@
                             android:text="@string/textBtnOne"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent" android:id="@+id/button9" android:layout_weight="1"
-                            style="@android:style/Widget.Material.Button" android:layout_marginHorizontal="10dp"
+                            style="@android:style/Widget.Material.Button" android:layout_marginHorizontal="5dp"
                             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                             android:onClick="onClick"/>
                     <Button
                             android:text="@string/textBtnTwo"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent" android:id="@+id/button10" android:layout_weight="1"
-                            android:layout_marginHorizontal="10dp"
+                            android:layout_marginHorizontal="5dp"
                             style="@android:style/Widget.Material.Button"
                             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                             android:onClick="onClick"/>
@@ -146,14 +147,14 @@
                             android:text="@string/textBtnThree"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent" android:id="@+id/button17" android:layout_weight="1"
-                            android:layout_marginHorizontal="10dp" style="@android:style/Widget.Material.Button"
+                            android:layout_marginHorizontal="5dp" style="@android:style/Widget.Material.Button"
                             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                             android:onClick="onClick"/>
                     <Button
                             android:text="@string/textBtnMultiply"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent" android:id="@+id/button11" android:layout_weight="1"
-                            android:layout_marginHorizontal="10dp" style="@android:style/Widget.Material.Button"
+                            android:layout_marginHorizontal="5dp" style="@android:style/Widget.Material.Button"
                             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                             android:onClick="onClick"/>
                 </LinearLayout>
@@ -165,24 +166,26 @@
                             android:text="@string/textBtnZero"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent" android:id="@+id/button13" android:layout_weight="1"
-                            android:layout_marginHorizontal="10dp" style="@android:style/Widget.Material.Button"
+                            android:layout_marginHorizontal="5dp" style="@android:style/Widget.Material.Button"
                             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                             android:onClick="onClick"/>
                     <Button
                             android:text="@string/textBtnDivide"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent" android:id="@+id/button12" android:layout_weight="1"
-                            android:layout_marginHorizontal="10dp" style="@android:style/Widget.Material.Button"
+                            android:layout_marginHorizontal="5dp" style="@android:style/Widget.Material.Button"
                             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                             android:onClick="onClick"/>
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
+        <!--
         <Button
                 android:text="@string/textBtnEquals"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" android:id="@+id/btnEquals" android:layout_weight="4"
                 android:layout_marginHorizontal="10dp" style="@android:style/Widget.Material.Button"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:onClick="onClick"/>
+        -->
     </LinearLayout>
 </LinearLayout>
