--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -7,4 +7,7 @@
     <item android:id="@+id/lastResult"
             android:title="@string/last_result" >
     </item>
+    <item android:id="@+id/inputCounter"
+            android:title="@string/inputCounter_text" >
+    </item>
 </menu>
